modif doc swagger
